examples/18-aws-local-modules-remote-modules-eks-k8s-ex/lambda-ingress-aws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lambda-gw-ingress
  namespace: lambda
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip  
spec:
  # Add TLS 
  rules:
  - http:
      paths:
      - path: /api/v1/cart/
        pathType: Prefix
        backend:
          service:
          # Service 1: Cart Service
           name: cart-service
           port:
             number: 80
      - path: /api/v1/order/
        pathType: Prefix
        backend:
          service:
          # Service 2: Order Service
           name: order-service
           port:
             number: 80
      - path: /api/v1/payment/
        pathType: Prefix
        backend:
          service:
          # Service 3: Payment Service
           name: payment-service
           port:
             number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
          # UI Service
           name: ws-service
           port:
             number: 80
